--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,23 @@
+/*
+    |-------------------------------|
+    |-------theme parametres--------|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |------- Variables Colors-------|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |----variables images sources---|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |-----variables font family-----|
+    |-------------------------------|
+    */
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @font-face {
@@ -8,6 +28,31 @@
   font-style: normal;
 }
 
+/*
+    |-------------------------------|
+    |-variable padding for section--|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |----ariables Break-points -----|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |-----variables Font size ------|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |-----variables Font weight-----|
+    |-------------------------------|
+    */
+/*
+    |-------------------------------|
+    |-----variables line height-----|
+    |-------------------------------|
+    */
 * {
   margin: 0;
   padding: 0;
@@ -136,13 +181,13 @@ h4, .logo {
 .navbar .logo {
   font-family: "Ludicrous-Stencil",sans-serif;
   font-weight: bold;
-  color: #e48022;
+  color: #ebb641;
   font-size: 30px !important;
   line-height: 50px;
-  background: -webkit-linear-gradient(0deg, #e48022 0%, white 100%);
+  background: -webkit-linear-gradient(0deg, #ebb641 0%, white 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background: -moz-linear-gradient(0deg, #e48022 0%, white 100%);
+  background: -moz-linear-gradient(0deg, #ebb641 0%, white 100%);
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
 }
@@ -169,14 +214,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #e48022;
+  background-color: #ebb641;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #e48022;
+  color: #ebb641;
 }
 
 .navbar li a:hover::after {
@@ -185,7 +230,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #e48022;
+  color: #ebb641;
 }
 
 .invisible {
@@ -193,7 +238,7 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #001415 0%, #00323f 35%, #10b1cd 100%);
+  background-image: linear-gradient(90deg, #001415 0%, #3f3600 35%, #ebb641 100%);
 }
 
 .parallax-window {
@@ -260,7 +305,7 @@ a.active:not(.logo) {
   margin: 0 auto;
   color: white;
   /* Clip Background Image */
-  background: url(../../../../public/images/animated-text-fill.png) repeat-y;
+  background: url("../../../../public/images/animated-text-fill-yellow.png") repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -329,7 +374,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #e48022;
+  color: #ebb641;
   opacity: 1;
 }
 
@@ -345,7 +390,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #e48022;
+  color: #ebb641;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
