--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,10 +183,11 @@ h4, .logo {
   font-weight: bold;
   font-size: 30px !important;
   line-height: 50px;
-  background: -webkit-linear-gradient(0deg, #1380a1 0%, white 100%);
+  background: -webkit-linear-gradient(0deg, #ebb641 0%, white 100%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
-  background: -moz-linear-gradient(0deg, #1380a1 0%, white 100%);
+  background: -moz-linear-gradient(0deg, #ebb641 0%, white 100%);
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
 }
@@ -213,14 +214,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #1380a1;
+  background-color: #ebb641;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #1380a1;
+  color: #ebb641;
 }
 
 .navbar li a:hover::after {
@@ -229,7 +230,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #1380a1;
+  color: #ebb641;
 }
 
 .invisible {
@@ -237,7 +238,7 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #001415 0%, #002b3f 35%, #1380a1 100%);
+  background-image: linear-gradient(90deg, #001415 0%, #3f3600 35%, #ebb641 100%);
 }
 
 .parallax-window {
@@ -304,7 +305,7 @@ a.active:not(.logo) {
   margin: 0 auto;
   color: white;
   /* Clip Background Image */
-  background: url("../../../../public/images/animated-text-fill-blue.png") repeat-y;
+  background: url("../../../../public/images/animated-text-fill-yellow.png") repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -373,7 +374,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #1380a1;
+  color: #ebb641;
   opacity: 1;
 }
 
@@ -389,7 +390,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #1380a1;
+  color: #ebb641;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -711,9 +712,9 @@ a.active:not(.logo) {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #27B5CE;
-  color: #fff;
-  transition: display 0.5s ease-in-out;
+  background: #ebb641;
+  color: white;
+  transition: all 0.5s ease-in-out;
   z-index: 50;
   text-align: center;
   padding-top: 10px;
@@ -725,9 +726,7 @@ a.active:not(.logo) {
 }
 
 .back-to-top:hover {
-  color: #fff;
-  background: #1C5B69;
-  transition: background 0.2s ease-in-out;
+  opacity: 0.7;
 }
 
 .flexrow {
