--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 //à décommenter si vous avez un logo à remplacer
 @font-face {
 	font-family: "Ludicrous-Stencil";
-	src: url('"../../../../public/fonts/Ludicrous-Stencil.ttf"') ;
+	src: url('../../../../public/fonts/Ludicrous-Stencil.ttf') ;
    }
 .navbar { 
     .logo{
