--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,11 +183,11 @@ h4, .logo {
   font-weight: bold;
   font-size: 30px !important;
   line-height: 50px;
-  background: -webkit-linear-gradient(0deg, #ebb641 0%, white 100%);
+  background: -webkit-linear-gradient(0deg, #b30000 0%, white 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  background: -moz-linear-gradient(0deg, #ebb641 0%, white 100%);
+  background: -moz-linear-gradient(0deg, #b30000 0%, white 100%);
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
 }
@@ -214,14 +214,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #ebb641;
+  background-color: #b30000;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #ebb641;
+  color: #b30000;
 }
 
 .navbar li a:hover::after {
@@ -230,7 +230,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #ebb641;
+  color: #b30000;
 }
 
 .invisible {
@@ -238,7 +238,7 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #001415 0%, #3f3600 35%, #ebb641 100%);
+  background-image: linear-gradient(90deg, #1a0000 0%, #680000 35%, #b30000 100%);
 }
 
 .parallax-window {
@@ -305,7 +305,7 @@ a.active:not(.logo) {
   margin: 0 auto;
   color: white;
   /* Clip Background Image */
-  background: url("../../../../public/images/animated-text-fill-yellow.png") repeat-y;
+  background: url("../../../../public/images/animated-text-fill-grenade.png") repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -374,7 +374,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #ebb641;
+  color: #b30000;
   opacity: 1;
 }
 
@@ -390,7 +390,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #ebb641;
+  color: #b30000;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -701,6 +701,36 @@ a.active:not(.logo) {
 }
 
 /*--------------------------------------------------------------
+# scrolbar
+--------------------------------------------------------------*/
+/* width */
+::-webkit-scrollbar {
+  width: 16px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b30000;
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar {
+  width: 16px;
+  height: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  opacity: .5;
+}
+
+/*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
 .back-to-top {
@@ -711,7 +741,7 @@ a.active:not(.logo) {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #ebb641;
+  background: #b30000;
   color: white;
   transition: all 0.5s ease-in-out;
   z-index: 50;
@@ -743,6 +773,6 @@ a.active:not(.logo) {
 }
 
 .title {
-  color: #ebb641;
+  color: #b30000;
 }
 /*# sourceMappingURL=main.css.map */
