--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -6,27 +6,38 @@
     */
     // pour changer le theme mettre true à celui choisi et false aux reste
     $orangeTheme : false;
-    $yellowTheme : true;
+    $yellowTheme : false;
     $blueTheme : false;
-    //color by default
+    $greenTheme : false;
+    $grenadeTheme : true;
+    //color by default 
     $color-profile2:rgb(19, 128, 161);
-    $color-bgNav: linear-gradient(90deg, #001415 0%, rgb(0, 43, 63) 35%, rgba(19, 128, 161,1) 100%);
+    $color-bgNav: linear-gradient(90deg, #001415 0%, rgb(0, 43, 63) 35%, $color-profile2 100%);
     $animated-text-fill-img:"animated-text-fill-blue.png";    
 
     @if ($orangeTheme) {
         $color-profile2:rgb(228, 128, 34);
-        $color-bgNav: linear-gradient(90deg, #001415 0%, rgba(63, 54, 0,1) 35%, rgba(228, 128, 34,1) 100%);
+        $color-bgNav: linear-gradient(90deg, #001415 0%, rgba(63, 54, 0,1) 35%, $color-profile2 100%);
         $animated-text-fill-img:"animated-text-fill-orange.png";
     } 
     @else if  $yellowTheme {
-        $color-profile2:rgb(235, 182, 65);
-        $color-bgNav: linear-gradient(90deg, #001415 0%, rgb(63, 54, 0) 35%, rgba(235, 182, 65,1) 100%);
+        $color-profile2:rgb(187, 153, 4);
+        $color-bgNav: linear-gradient(90deg, rgb(46, 37, 0) 0%, rgb(109, 89, 1) 35%, $color-profile2 100%);
         $animated-text-fill-img:"animated-text-fill-yellow.png";
     } @else if $blueTheme {
-        $color-profile2:rgb(19, 128, 161);
-        $color-bgNav: linear-gradient(90deg, #001415 0%, rgb(0, 43, 63) 35%, rgba(19, 128, 161,1) 100%);
+        $color-profile2:rgb(0, 123, 160);
+        $color-bgNav: linear-gradient(90deg, rgb(0, 20, 21) 0%, rgb(1, 70, 102) 35%, $color-profile2 100%);
         $animated-text-fill-img:"animated-text-fill-blue.png";
-    } 
+    } @else if $greenTheme{
+        $color-profile2:rgb(153, 170, 3);
+        $color-bgNav: linear-gradient(90deg, rgb(21, 31, 0) 0%, rgb(66, 94, 1) 35%, $color-profile2 100%);
+        $animated-text-fill-img:"animated-text-fill-green.png";
+    } @else if $grenadeTheme{
+        $color-profile2:rgb(179, 0, 0);
+        $color-bgNav: linear-gradient(90deg, rgb(26, 0, 0) 0%, rgb(104, 0, 0) 35%, $color-profile2 100%);
+        $animated-text-fill-img:"animated-text-fill-grenade.png";
+    }
+    
     
 
 
