--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -4,6 +4,33 @@
 "./mediaquery";
 
 
+
+/*--------------------------------------------------------------
+# scrolbar
+--------------------------------------------------------------*/
+/* width */
+::-webkit-scrollbar {
+  width: 16px;  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+  
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:  $color-profile2; 
+  border-radius: 10px;  
+}
+html::-webkit-scrollbar{width:16px;height:5px}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  // background: #b30000; 
+  opacity: .5;
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
