--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -5,11 +5,11 @@
     |-------------------------------|
     */
     // pour changer le theme mettre true à celui choisi et false aux reste
-    $orangeTheme : false;
-    $yellowTheme : false;
+    $orangeTheme :false ;
+    $yellowTheme :false ;
     $blueTheme : false;
-    $greenTheme : false;
-    $grenadeTheme : true;
+    $greenTheme :true ;
+    $grenadeTheme :false ;
     //color by default 
     $color-profile2:rgb(19, 128, 161);
     $color-bgNav: linear-gradient(90deg, #001415 0%, rgb(0, 43, 63) 35%, $color-profile2 100%);
