--- a/public/css/sass/bases/_bases.scss
+++ b/public/css/sass/bases/_bases.scss
@@ -17,7 +17,8 @@ body {
     a:hover{
         text-decoration: none ;          
     }
-    
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 
