--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -8,28 +8,58 @@
 /*--------------------------------------------------------------
 # scrolbar
 --------------------------------------------------------------*/
-/* width */
-::-webkit-scrollbar {
-  width: 16px;  
-}
+// /* width */
+// ::-webkit-scrollbar {
+//   width: 8px;  
+//   transition: all 0.3s ease-in;
+// }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 5px $color-profile2; 
+//   border-radius: 10px;
   
-}
+// }
  
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background:  $color-profile2; 
-  border-radius: 10px;  
-}
-html::-webkit-scrollbar{width:16px;height:5px}
-/* Handle on hover */
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background:  $color-profile2; 
+//   border-radius: 10px;  
+// }
+// html::-webkit-scrollbar{
+//   width:8px;
+//   height:8px;
+// }
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: $color-profile3; 
+// }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: $color-profile2 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: $color-profile2;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+    transition:all .3s  ease-in;
+  }
+  /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  // background: #b30000; 
-  opacity: .5;
+  background: $color-profile3; 
 }
 /*--------------------------------------------------------------
 # Back to top button
@@ -57,7 +87,7 @@ html::-webkit-scrollbar{width:16px;height:5px}
   }
   
   .back-to-top:hover {
-    opacity: 0.5;
+    background: $color-profile3;
   }
   
 
