--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -8,8 +8,8 @@
     
     
         $blueTheme : false ;
-        $orangeTheme :true  ; 
-        $greenTheme :false  ;
+        $orangeTheme : false ; 
+        $greenTheme : true ;
         
    
       
