--- a/public/css/main.css
+++ b/public/css/main.css
@@ -167,11 +167,6 @@ h4, .logo {
   width: 100%;
 }
 
-@font-face {
-  font-family: "Ludicrous-Stencil";
-  src: url("../../../../public/fonts/Ludicrous-Stencil.ttf");
-}
-
 .navbar {
   position: fixed;
   font-weight: bold !important;
@@ -181,7 +176,7 @@ h4, .logo {
 }
 
 .navbar .logo {
-  content: url(../../../../public/images/logoOrange.png);
+  content: url(../../../../public/images/logoGreen.png);
 }
 
 .navbar li {
@@ -206,14 +201,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #bd8a0a;
+  background-color: #859403;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #bd8a0a;
+  color: #859403;
 }
 
 .navbar li a:hover::after {
@@ -222,7 +217,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #bd8a0a;
+  color: #859403;
 }
 
 .invisible {
@@ -230,12 +225,12 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #221d00 10%, #504400 30%, #dbb406 50%);
+  background-image: linear-gradient(90deg, #151f00 10%, #555c1c 30%, #b2c502 50%);
 }
 
 .parallax-window {
   max-height: 100vh;
-  background-color: #dbb406;
+  background-color: #b2c502;
   opacity: 0.2;
 }
 
@@ -298,7 +293,7 @@ a.active:not(.logo) {
   margin: 0 auto;
   color: white;
   /* Clip Background Image */
-  background: url("../../../../public/images/animated-text-fill-orange.png") repeat-y;
+  background: url("../../../../public/images/animated-text-fill-green.png") repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -367,7 +362,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #bd8a0a;
+  color: #859403;
   opacity: 1;
 }
 
@@ -383,7 +378,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #bd8a0a;
+  color: #859403;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -700,7 +695,7 @@ a.active:not(.logo) {
 /* Firefox */
 * {
   scrollbar-width: auto;
-  scrollbar-color: #bd8a0a #ffffff;
+  scrollbar-color: #859403 #ffffff;
 }
 
 /* Chrome, Edge, and Safari */
@@ -713,7 +708,7 @@ a.active:not(.logo) {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #bd8a0a;
+  background-color: #859403;
   border-radius: 10px;
   border: 3px solid #ffffff;
   transition: all .3s  ease-in;
@@ -721,7 +716,7 @@ a.active:not(.logo) {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #dbb406;
+  background: #b2c502;
 }
 
 /*--------------------------------------------------------------
@@ -735,7 +730,7 @@ a.active:not(.logo) {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #bd8a0a;
+  background: #859403;
   color: white;
   transition: all 0.5s ease-in-out;
   z-index: 50;
@@ -749,7 +744,7 @@ a.active:not(.logo) {
 }
 
 .back-to-top:hover {
-  background: #dbb406;
+  background: #b2c502;
 }
 
 .flexrow {
@@ -767,6 +762,6 @@ a.active:not(.logo) {
 }
 
 .title {
-  color: #bd8a0a;
+  color: #859403;
 }
 /*# sourceMappingURL=main.css.map */
