--- a/public/css/sass/layouts/_experience.scss
+++ b/public/css/sass/layouts/_experience.scss
@@ -1,3 +1,4 @@
-.card .card-body{
-    background-color: $color-profile3;
+.card .cardbg{
+    // background-color: $color-profile3 !important;
+    background-color: red !important;
 }
