--- a/public/css/sass/layouts/_experience.scss
+++ b/public/css/sass/layouts/_experience.scss
@@ -1,4 +1,4 @@
-.card .cardbg{
+#experience .card .cardbg{
     // background-color: $color-profile3 !important;
     background-color: red !important;
 }
