--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -4,7 +4,7 @@
     max-height: 100vh;   
 	@if not($blueTheme) {
 	background-color: $color-profile3;
-	// opacity: 0.2;
+	opacity: 0.2;
     }
 
 }
