--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -7,9 +7,9 @@
     // pour changer le theme mettre true à celui choisi et false aux reste
     
     
-        $blueTheme :true  ;
-        $orangeTheme : false ; 
-        $greenTheme : false ;
+        $blueTheme : false ;
+        $orangeTheme :false  ; 
+        $greenTheme :true  ;
         
    
       
