--- a/public/css/sass/layouts/_experience.scss
+++ b/public/css/sass/layouts/_experience.scss
@@ -1,6 +1,5 @@
 .cardbg{
-    // background-color: $color-profile3 !important;
-    background-color: red !important;
-    color:red !important;
+    background-color: $color-profile2 !important;
+   
 
 }
